--- a/blender-today/application/templates/users/view.html
+++ b/blender-today/application/templates/users/view.html
@@ -179,7 +179,7 @@
 			{% endfor %}
 		{% else %}
 			<div class="post-index-empty">
-				<h3>Nothing to see here... yet.</h3>
+				<h3>Nothing to see here... yet</h3>
 				<h4>tell {{user.username}} to post something awesome</h4>
 			</div>
 		{% endif %}
