--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -508,6 +508,12 @@ blockquote
 		+media-xs
 			margin-bottom: 10px
 
+	& h1
+		font-size: 2em
+
+	& h2
+		font-size: 1.5em
+
 	& iframe
 		width: 100%
 		min-height: 476px
