Post View: Show how long ago since it has been edited

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -565,7 +565,6 @@ blockquote
 
 	&.action-edit:focus
 		border: 3px dashed lighten($color_brand_main, 20%)
-		color: black
 
 	&.action-edit:focus:after
 		color: $color_brand_main
@@ -1992,6 +1991,7 @@ fieldset
 				&.active
 					color: $color_brand_secondary
 	& .nav-sidebar-avatar
+		display: inline-block
 		height: 30px
 		width: 30px
 		background-size: cover
@@ -2188,7 +2188,7 @@ fieldset
 	font-family: $font_body !important
 	+box-shadow-none
 	& body
-	font-family: $font_body !important
+		font-family: $font_body !important
 
 .cke_panel_listItem.cke_selected a
 	font-family: $font_body !important
