--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -545,6 +545,7 @@ blockquote
 
 		& li
 			margin-bottom: 10px
+		  word-break: break-word
 
 		& li:before
 			content: '·'
@@ -559,6 +560,7 @@ blockquote
 		color: #c7254e
 		background-color: #f9f2f4
 		border: none
+	  word-break: break-word
 		+border-radius(3px)
 
 	&.action-edit
