Fix 404 on config.js for submit
Also add avatar when commenting

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1163,6 +1163,7 @@ div#post-comment-reply-container
 	margin: 0
 	& h3
 		font-weight: lighter
+		margin-left: 80px
 
 .post-view-comments-empty
 	font-size: 1.2em
@@ -2225,7 +2226,7 @@ fieldset
 	//color: lighten($color_text, 10%) !important
 	border: thin solid lighten($color_text, 60%) !important
 	background-color: lighten($color_background, 3%) !important
-	resize: none
+	//resize: none
 	margin: 0 !important
 	+border-radius(3px)
 
