--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -274,20 +274,38 @@
 
 				{% if post.status != 'deleted' %}
 				<div class="post-view-comments-submit">
-					<div class="row">
-						<div class="col-md-1">
-						</div>
-						<div class="col-md-11">
-							{% if current_user.is_anonymous() %}
-								<h3><a href="{{url_for_security('login')}}">Login to comment</a></h3>
-							{% else %}
-								<h3>Leave a comment</h3>
-							{% endif %}
-						</div>
 
-						<div class="col-md-1">
-						</div>
-						<div class="col-md-11">
+					{% if current_user.is_anonymous() %}
+						<h3><a href="{{url_for_security('login')}}">Login to comment</a></h3>
+					{% else %}
+						<h3>Leave a comment</h3>
+					{% endif %}
+
+					<div class="post-view-comments-avatar">
+
+							<img class="img-circle op" src="{{current_user.gravatar()}}" title="{{current_user.first_name}} {{current_user.last_name}}">
+
+							{% if current_user.has_role('dev_core') %}
+								<div class="post-view-comments-avatar-label">
+									<i class="dev_core bf-blender" title="Blender Core Developer"></i>
+								</div>
+							{% elif current_user.has_role('bfct_trainer') %}
+								<div class="post-view-comments-avatar-label">
+									<i class="bfct_trainer fa fa-graduation-cap" title="Blender Foundation Certified Trainer"></i>
+								</div>
+							{% elif current_user.has_role('network_member') %}
+								<div class="post-view-comments-avatar-label">
+									<i class="network_member bf-network" title="Blender Network Member"></i>
+								</div>
+							{% elif current_user.has_role('cloud_member') %}
+								<div class="post-view-comments-avatar-label">
+									<i class="cloud_member bf-cloud" title="Blender Cloud Member"></i>
+								</div>
+							{% endif %}
+					</div>
+
+		<div class="post-view-comments-item-content">
+
 							{% if not current_user.is_anonymous() %}
 							<form id="form-comment" role="form" method="POST" enctype="multipart/form-data" action="{{url_for('comments.submit', post_id=post.id)}}">
 								{{ form.hidden_tag() }}
@@ -307,7 +325,7 @@
 
 							</form>
 						{% endif %}
-						</div>
+
 					</div>
 				</div> <!-- post-view-comments-submit -->
 				{% endif %}
