--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1072,6 +1072,10 @@ div#post-comment-reply-container
 		width: 50px
 		margin-right: 10px
 		margin-left: 5px
+
+	&:hover
+		opacity: 0.9
+
 	& .post-view-comments-avatar-deleted
 		width: 50px
 		height: 50px
