Fix links to categories

--- a/blender-today/application/templates/posts/index.html
+++ b/blender-today/application/templates/posts/index.html
@@ -83,7 +83,7 @@
 
 							<span class="separator"></span>
 
-							<a href="{{url_for('index')}}{{post.category.url}}">{{post.category}}</a>
+							<a href="{{url_for('index')}}p/{{post.category.url}}">{{post.category}}</a>
 
 							<span class="separator"></span>
 
