--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -41,7 +41,7 @@
 				<h4 class="post-view-container-title">
 					<a href="{{url_for('index')}}">Home</a>
 					<strong>·</strong>
-					<a href="{{url_for('index')}}{{post.category.url}}">{{post.category.name}}</a>
+					<a href="{{url_for('index')}}p/{{post.category.url}}">{{post.category.name}}</a>
 				</h4>
 			</div>
 			<div class="col-md-6 col-xs-6">
