Don't show deleted posts on user page

--- a/blender-today/application/templates/users/view.html
+++ b/blender-today/application/templates/users/view.html
@@ -94,6 +94,7 @@
 				</h4>
 			</div>
 			{% for post in user.posts %}
+			{% if (post.status != 'deleted') %}
 			<div class="row">
 				<div class="col-md-12">
 					<div class="post-index-item {{ loop.cycle('odd', 'even') }}">
@@ -180,6 +181,7 @@
 					</div> <!-- post-index-item -->
 				</div> <!-- col-md -->
 			</div> <!-- row -->
+			{% endif %}
 			{% endfor %}
 		{% else %}
 			<div class="post-index-empty">
