Post View: Don't max-height for tweets

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -535,6 +535,7 @@ blockquote
 			border: none !important
 			margin: 0 15px 25px 75px !important
 			width: 90% !important
+			max-height: initial !important
 
 	& ul
 		list-style-type: none
