--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -281,33 +281,34 @@
 						<h3>Leave a comment</h3>
 					{% endif %}
 
+					{% if current_user.is_authenticated() %}
 					<div class="post-view-comments-avatar">
+						<a href="{{url_for('index')}}u/{{current_user.id}}">
+							<img class="img-circle{% if post.user.id == current_user.id %} op{% endif %}" src="{{current_user.gravatar()}}" title="{{current_user.first_name}} {{current_user.last_name}}">
+						
+							{% if current_user.has_role('dev_core') %}
+								<div class="post-view-comments-avatar-label">
+									<i class="dev_core bf-blender" title="Blender Core Developer"></i>
+								</div>
+							{% elif current_user.has_role('bfct_trainer') %}
+								<div class="post-view-comments-avatar-label">
+									<i class="bfct_trainer fa fa-graduation-cap" title="Blender Foundation Certified Trainer"></i>
+								</div>
+							{% elif current_user.has_role('network_member') %}
+								<div class="post-view-comments-avatar-label">
+									<i class="network_member bf-network" title="Blender Network Member"></i>
+								</div>
+							{% elif current_user.has_role('cloud_member') %}
+								<div class="post-view-comments-avatar-label">
+									<i class="cloud_member bf-cloud" title="Blender Cloud Member"></i>
+								</div>
+							{% endif %}
 
-							<a href="{{url_for('index')}}u/{{current_user.id}}">
-								<img class="img-circle{% if post.user.id == current_user.id %} op{% endif %}" src="{{current_user.gravatar()}}" title="{{current_user.first_name}} {{current_user.last_name}}">
-							
-								{% if current_user.has_role('dev_core') %}
-									<div class="post-view-comments-avatar-label">
-										<i class="dev_core bf-blender" title="Blender Core Developer"></i>
-									</div>
-								{% elif current_user.has_role('bfct_trainer') %}
-									<div class="post-view-comments-avatar-label">
-										<i class="bfct_trainer fa fa-graduation-cap" title="Blender Foundation Certified Trainer"></i>
-									</div>
-								{% elif current_user.has_role('network_member') %}
-									<div class="post-view-comments-avatar-label">
-										<i class="network_member bf-network" title="Blender Network Member"></i>
-									</div>
-								{% elif current_user.has_role('cloud_member') %}
-									<div class="post-view-comments-avatar-label">
-										<i class="cloud_member bf-cloud" title="Blender Cloud Member"></i>
-									</div>
-								{% endif %}
-
-							</a>
+						</a>
 					</div>
+					{% endif %}
 
-		<div class="post-view-comments-item-content">
+					<div class="post-view-comments-item-content">
 
 							{% if not current_user.is_anonymous() %}
 							<form id="form-comment" role="form" method="POST" enctype="multipart/form-data" action="{{url_for('comments.submit', post_id=post.id)}}">
