Display reputation next to post view

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -667,6 +667,10 @@ blockquote
 			font-size: 1em
 			display: inline-block
 
+	& .author-karma
+		opacity: 0.5
+		+text-shadow-none
+
 	& .author-roles
 		display: block
 		font-size: 0.9em
