Post view: Expose reputation
- User: Expose reputation
- Comments: text 'points' next to the comments points

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -668,7 +668,13 @@ blockquote
 			display: inline-block
 
 	& .author-karma
-		opacity: 0.5
+		display: inline-block
+		background-color: darken($color_brand_main, 10%)
+		color: lighten($color_brand_main, 20%)
+		font-size: 0.65em
+		border-radius: 3px
+		padding: 1px 4px
+		margin: 0 2px
 		+text-shadow-none
 
 	& .author-roles
