--- a/blender-today/application/templates/posts/_macros.html
+++ b/blender-today/application/templates/posts/_macros.html
@@ -57,7 +57,10 @@
 				<i class="fa fa-chevron-down"></i>
 			</a>
 			<span class="separator"></span>
-			<span class="rating" title="Comment Points">{{comment.rating_delta}}</span>
+			<span class="rating" title="Comment Points">
+				{{comment.rating_delta}}
+			</span>
+			{% if comment.rating_delta == 1 or comment.rating_delta == -1 %}point{% else %}points{% endif %}
 			<span class="separator"></span>
 			<span title="{{comment.creation_date.strftime('%H:%M on %d %B, %Y')}}">{{comment.pretty_creation_date}}</span>
 
