CSS tweaks for better display of Instagram oembed

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -538,6 +538,13 @@ blockquote
 			min-height: initial !important
 			max-height: initial !important
 
+		&#instagram-embed-0
+			min-height: initial !important
+			max-height: initial !important
+			max-width: initial !important
+			padding: 0 20px !important
+			margin: 0 0 20px 0 !important
+
 	& ul
 		list-style-type: none
 		padding-left: 20px
