--- a/blender-today/application/templates/posts/view.html
+++ b/blender-today/application/templates/posts/view.html
@@ -221,7 +221,12 @@
 
 							<span class="meta">
 								<span class="date">
-								Posted <span title="{{post.creation_date.strftime('%H:%M on %A %d, %B %Y')}}">{{post.pretty_creation_date}}</span>
+								posted <span title="{{post.creation_date.strftime('%H:%M on %A %d, %B %Y')}}">{{post.pretty_creation_date}}</span>
+
+								<span class="separator"></span>
+
+								<a href="{{url_for('index')}}p/{{post.category.url}}">{{post.category.name}}</a>
+
 								{% if post.status == 'deleted' %}
 									<span class="disabled">(deleted)</span>
 								{% else %}
@@ -232,7 +237,9 @@
 									{% endif %}
 								{% endif %}
 								</span>
+
 								<span class="separator"></span>
+
 								<a title="Permalink" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid)}}">
 									<i class="fa fa-link"></i>
 								</a>
