--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -110,26 +110,28 @@ blockquote
 		left: -2%
 		position: relative
 
-.post-view-container-title
-	position: relative
-	top: -10px
-	& strong
-		color: $color_brand_secondary
+	&-title
+		position: relative
+		top: -10px
+		& strong
+			color: $color_brand_secondary
 
 /* post-index */
 .post-index, .post-view
 	margin-top: 25px
 
-.post-index h4
-	position: relative
-	top: -10px
-	+media-xs
-		margin-bottom: 0
+.post-index
+	& h4
+		position: relative
+		top: -10px
+		+media-xs
+			margin-bottom: 0
 
-	& strong
-		color: $color_brand_secondary
-.post-index select
-	display: none // so the select categories doesn't appear for a moment 
+		& strong
+			color: $color_brand_secondary
+
+	& select
+		display: none // so the select categories doesn't appear for a moment 
 
 .post-index-item
 	display: block
@@ -159,80 +161,136 @@ blockquote
 			background-color: white
 			border: none
 
-
-.post-index-item-title
-	font-family: $font_headings
-	display: block
-	font-size: 1.6em
-	padding: 15px 0 5px 0
-	z-index: 1
-	//+text-shadow(1px, 1px, 0, darken($color_background, 3%), 0.5)
-
-	+media-xs
-		float: left
-		font-size: 1.2em
-		width: 78%
-		padding: 5px 5px 5px 10px
-		line-height: 1.2em
-		color: $color_brand_main
-		font-weight: 500
-		+text-shadow-none
-
-	+media-sm
-		font-size: 1.3em
-		padding-left: 170px
-	+media-md
-		font-size: 1.4em
-		padding-left: 170px
-	+media-lg
-		padding-left: 175px
-
-	&:hover, &:focus
-		text-decoration: none
-
-	&:visited
-		color: lighten($color_brand_main, 5%)
-		&:hover
-			color: $color_brand_secondary
-
-// .post-index-item-type:visited + a.post-index-item-title
-// 	color: blue
-
-.post-index-item-details
-	display: block
-	font-size: 0.9em
-	float: left
-	color: lighten($color_text, 30%)
-	padding: 3px 0 15px 0
-	+media-xs
-		font-size: 0.75em
-		width: 100%
-		padding: 10px 8px 6px 70px
-		float: right
-		border-top: thin solid lighten($color_text, 70%)
+	&-title
+		display: block
 		position: relative
-		+text-overflow-ellipsis
-	+media-sm
-		font-size: 0.8em
-		padding-left: 110px
-	+media-md
+		z-index: 1
+		padding: 15px 0 5px 0
+		font-family: $font_headings
+		font-size: 1.6em
+		//+text-shadow(1px, 1px, 0, darken($color_background, 3%), 0.5)
+
+		+media-xs
+			float: left
+			font-size: 1.2em
+			width: 78%
+			padding: 5px 5px 5px 10px
+			line-height: 1.2em
+			color: $color_brand_main
+			font-weight: 500
+			+text-shadow-none
+
+		+media-sm
+			font-size: 1.3em
+			padding-left: 170px
+		+media-md
+			font-size: 1.4em
+			padding-left: 170px
+		+media-lg
+			padding-left: 175px
+
+		&:hover, &:focus
+			text-decoration: none
+
+		&:visited
+			color: lighten($color_brand_main, 5%)
+			&:hover
+				color: $color_brand_secondary
+
+	&-details
+		display: block
+		position: relative
+		z-index: 1
 		font-size: 0.9em
-		padding-left: 110px
-	+media-lg
-		padding-left: 115px
+		float: left
+		color: lighten($color_text, 30%)
+		padding: 3px 0 15px 0
+		+media-xs
+			font-size: 0.75em
+			width: 100%
+			padding: 10px 8px 6px 70px
+			float: right
+			border-top: thin solid lighten($color_text, 70%)
+			position: relative
+			+text-overflow-ellipsis
+		+media-sm
+			font-size: 0.8em
+			padding-left: 110px
+		+media-md
+			font-size: 0.9em
+			padding-left: 110px
+		+media-lg
+			padding-left: 115px
 
-	& a
-		color: lighten($color_text, 20%)
-		&:hover
-			color: $color_brand_secondary
+		& a
+			color: lighten($color_text, 20%)
+			&:hover
+				color: $color_brand_secondary
 
-	& .post-index-item-details-comments,
-	& .post-index-item-details-type
-		display: inline-block
+		& .post-index-item-details-comments,
+		& .post-index-item-details-type
+			display: inline-block
 
-	& .deleted
-		color: lighten($color_text, 50%)
-		+user-select-none
+		& .deleted
+			color: lighten($color_text, 50%)
+			+user-select-none
+
+	&.featured
+		min-height: 240px
+
+		&:hover .post-index-item-featured-backdrop
+			background-position: 50% 33%
+
+		& .post-index-item-title
+			display: block
+			position: absolute
+			z-index: 1
+			right: 0
+			text-align: right
+			font-size: 1em
+			background-color: rgba(darken($color_text, 20%), .6)
+			//background: linear-gradient(to bottom, rgba(black, .5) 90%, rgba(black, 0) 95%)
+			color: white
+			padding: 10px 15px
+			border-bottom-left-radius: 3px
+			+text-shadow(1px, 1px, 0, black, .2)
+			+box-shadow(0, 0, 3px, black, 1.0)
+
+			& .post-index-item-title-details
+				position: relative
+				display: block
+				font-size: .8em
+
+		& .post-index-item-rate
+			position: absolute
+			z-index: 2
+			+text-shadow(0, 0, 25px, black, 1.0)
+
+		& .post-index-item-rate .up,
+		& .post-index-item-rate .middle,
+		& .post-index-item-rate .down
+			color: white
+
+		& .post-index-item-rate .up:hover,
+		& .post-index-item-rate .up.rated
+			color: $color_upvote
+		& .post-index-item-rate .down:hover,
+		& .post-index-item-rate .down.rated
+			color: $color_downvote
+
+	&-featured
+		&-backdrop
+			width: 100%
+			height: 100%
+			display: inline-block
+			position: absolute
+			z-index: 0
+			background-size: cover
+			background-repeat: no-repeat
+			background-position: 50% 50%
+			+border-radius(3px)
+			+transition(background-position, 250ms, ease)
+
 
 .post-index-item-details-type
 	+media-xs
@@ -287,10 +345,13 @@ blockquote
 
 
 .post-index-item-rate
-	float: left
 	display: inline-block
+	position: relative
+	z-index: 2
+	float: left
 	padding-top: 8px
 	text-align: center
+
 	+media-xs
 		width: 16%
 		float: left
@@ -1812,9 +1873,10 @@ fieldset
 			border: none
 			color: $color_brand_main
 			background-color: transparent
-		&:hover a, &:active a, &:focus a
-			color: $color_brand_secondary
-			background-color: transparent
+		&:hover a, &:active a, &:focus a,
+		& span:active, & span:focus, & span:hover
+			color: $color_brand_secondary !important // override bootstrap
+			background-color: transparent !important // override bootstrap
 
 		&.active 
 			& a
