Alignment tweaks for posts

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -266,6 +266,11 @@ blockquote
 			z-index: 2
 			+text-shadow(0, 0, 25px, black, 1.0)
 
+			+media-xs
+				top: initial
+				left: 10px
+				width: initial
+
 		& .post-index-item-rate .up,
 		& .post-index-item-rate .middle,
 		& .post-index-item-rate .down
@@ -353,7 +358,7 @@ blockquote
 	text-align: center
 
 	+media-xs
-		width: 16%
+		width: 55px
 		float: left
 		position: absolute
 		top: 60px
