--- a/blender-today/application/templates/users/view.html
+++ b/blender-today/application/templates/users/view.html
@@ -96,88 +96,120 @@
 			{% for post in posts %}
 			<div class="row">
 				<div class="col-md-12">
-					<div class="post-index-item {{ loop.cycle('odd', 'even') }}">
 
-						{# Post circle thingie #}
-						<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}" title="View post and comments"
-							 class="post-index-item-type {{post.post_type.url}}" {% if post.picture %}style="background: url({{post.thumbnail('s')}}) top left no-repeat"{% endif %}>
-							{% if not post.picture %}
-								{% if post.post_type.url == 'link' %}
-									<i class="fa fa-link"></i>
-								{% elif post.post_type.url == 'text' %}
-									<i class="fa fa-file-text-o"></i>
-								{% endif %}
-							{% endif %}
-						</a>
+					{% if post.is_featured %}
+						<div class="post-index-item featured">
 
-						<a class="post-index-item-title"
-							href="{% if post.post_type.url == 'link' %}{{post.content}}{% else %}{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}{% endif %}"
-							title="{{post.title}}"
-							{% if post.post_type.url == 'link' %}target="_blank"{% endif %}>
-							{{post.title}}
-						</a>
-
-						<div class="post-index-item-details" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}">
-
-							{{post.rating_delta}} points
-
-							<span class="separator"></span>
-
-							<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}" class="post-index-item-details-type">
-								{{post.post_type}}
-							</a>
-
-							<span class="separator"></span>
-
-							<a href="{{url_for('index')}}p/{{post.category.url}}">{{post.category}}</a>
-
-							<span class="separator"></span>
-
-							<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}#comments" class="post-index-item-details-comments">
-								<span class="hidden-xs">
-								{% if post.comments_count == 0 %}
-									comment
-								{% elif post.comments_count == 1 %}
-									1 comment
-								{% else %}
-									{{post.comments_count}} comments
-								{% endif %}
+							<a class="post-index-item-title"
+								href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}"
+								title="{{post.title}}">
+								{{post.title}}
+								<span class="post-index-item-title-details">
+									{{post.pretty_creation_date}}
+									· 
+									<small>by</small>
+									{% if post.user.deleted %}
+										<span class="deleted" title="This account no longer exists">[deleted]</span>
+									{% else %}
+										{{post.user.username}}
+									{% endif %}
 								</span>
-								{% if post.comments_count > 0 %}
-									<span class="visible-xs">
-										{{post.comments_count}} <i class="fa fa-comments-o"></i>
-									</span>
+							</a>
+
+							<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}">
+								<div class="post-index-item-featured-backdrop"
+										 style="background-image: url({{post.thumbnail('h')}});">
+								</div>
+							</a>
+						</div>
+
+					{% else %}
+
+						<div class="post-index-item {{ loop.cycle('odd', 'even') }}">
+
+							{# Post circle thingie #}
+							<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}" title="View post and comments"
+								 class="post-index-item-type {{post.post_type.url}}" {% if post.picture %}style="background: url({{post.thumbnail('s')}}) top left no-repeat"{% endif %}>
+								{% if not post.picture %}
+									{% if post.post_type.url == 'link' %}
+										<i class="fa fa-link"></i>
+									{% elif post.post_type.url == 'text' %}
+										<i class="fa fa-file-text-o"></i>
+									{% endif %}
 								{% endif %}
 							</a>
 
-							<span class="separator hidden-xs"></span>
+							<a class="post-index-item-title"
+								href="{% if post.post_type.url == 'link' %}{{post.content}}{% else %}{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}{% endif %}"
+								title="{{post.title}}"
+								{% if post.post_type.url == 'link' %}target="_blank"{% endif %}>
+								{{post.title}}
+							</a>
 
-							{{post.pretty_creation_date}}
+							<div class="post-index-item-details" href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}">
 
-							<small>by</small>
-							{% if post.user.deleted %}
-								<span class="deleted" title="This account no longer exists">[deleted]</span>
-							{% else %}
-								{{post.user.username}}
-							{% endif %}
+								{{post.rating_delta}} points
 
-							{% if post.status == 'deleted' %}
 								<span class="separator"></span>
-								<span class="label label-danger">Deleted</span>
-							{% endif %}
 
-							{% if post.picture %}
-							<span class="separator hidden-xs"></span>
-							<span class="post-index-item-picture-collapse"><i class="fa fa-minus-square-o"></i></span>
-							<span class="post-index-item-picture-expand"><i class="fa fa-plus-square-o"></i></span>
-							<img class="post-index-item-picture"
-									 title="Click and drag to resize"
-									 data-rel="{{post.thumbnail('l')}}" src=""/>
-							{% endif %}
+								<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}" class="post-index-item-details-type">
+									{{post.post_type}}
+								</a>
 
-						</div>
-						<div class="clearfix"></div>
-					</div> <!-- post-index-item -->
+								<span class="separator"></span>
+
+								<a href="{{url_for('index')}}p/{{post.category.url}}">{{post.category}}</a>
+
+								<span class="separator"></span>
+
+								<a href="{{url_for('posts.view', category=post.category.url, uuid=post.uuid, slug=post.slug)}}#comments" class="post-index-item-details-comments">
+									<span class="hidden-xs">
+									{% if post.comments_count == 0 %}
+										comment
+									{% elif post.comments_count == 1 %}
+										1 comment
+									{% else %}
+										{{post.comments_count}} comments
+									{% endif %}
+									</span>
+									{% if post.comments_count > 0 %}
+										<span class="visible-xs">
+											{{post.comments_count}} <i class="fa fa-comments-o"></i>
+										</span>
+									{% endif %}
+								</a>
+
+								<span class="separator hidden-xs"></span>
+
+								{{post.pretty_creation_date}}
+
+								<small>by</small>
+								{% if post.user.deleted %}
+									<span class="deleted" title="This account no longer exists">[deleted]</span>
+								{% else %}
+									{{post.user.username}}
+								{% endif %}
+
+								{% if post.status == 'deleted' %}
+									<span class="separator"></span>
+									<span class="label label-danger">Deleted</span>
+								{% endif %}
+
+								{% if post.picture %}
+								<span class="separator hidden-xs"></span>
+								<span class="post-index-item-picture-collapse"><i class="fa fa-minus-square-o"></i></span>
+								<span class="post-index-item-picture-expand"><i class="fa fa-plus-square-o"></i></span>
+								<img class="post-index-item-picture"
+										 title="Click and drag to resize"
+										 data-rel="{{post.thumbnail('l')}}" src=""/>
+								{% endif %}
+
+							</div>
+							<div class="clearfix"></div>
+						</div> <!-- post-index-item -->
+
+					{% endif %}
+
 				</div> <!-- col-md -->
 			</div> <!-- row -->
 			{% endfor %}
