--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -110,11 +110,11 @@ blockquote
 		left: -2%
 		position: relative
 
-	&-title
-		position: relative
-		top: -10px
-		& strong
-			color: $color_brand_secondary
+.post-view-container-title
+	position: relative
+	top: -10px
+	& strong
+		color: $color_brand_secondary
 
 /* post-index */
 .post-index, .post-view
