Center circles when lines are too big

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -423,22 +423,28 @@ blockquote
 		+box-shadow-none
 	+media-sm
 		position: absolute
-		top: -10px
+		//top: -10px
 		left: 55px
 		width: 100px
 		height: 100px
+		top: 50%
+		transform: translateY(-50%)
 	+media-md
 		position: absolute
-		top: -8px
+		//top: -8px
 		left: 55px
 		width: 100px
 		height: 100px
+		top: 50%
+		transform: translateY(-50%)
 	+media-lg
 		position: absolute
-		top: -8px
+		//top: -8px
 		left: 55px
 		width: 100px
 		height: 100px
+		top: 50%
+		transform: translateY(-50%)
 
 	&:hover
 		color: white
